--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,4 +5,5 @@
     <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="checkbox_preference">check_preference</string>
     <string name="edittext_preference">edittext_preference</string>
+    <string name="list_preference">list_preference</string>
 </resources>
